notes/klustered/episode-21/william-lightning/admission-pod.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: "validation.dns.k8s.io"
webhooks:
- name: "validation.dns.k8s.io"
  sideEffects: NoneOnDryRun
  rules:
  - apiGroups:   [""]
    apiVersions: ["v1"]
    operations:  ["CREATE","UPDATE"]
    resources:   ["pods"]
    scope:       "Namespaced"
  clientConfig:
    service:
      namespace: "kube-system"
      name: "kube-dns"
      port: 9153
    caBundle: "LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUMzekNDQWNlZ0F3SUJBZ0lSQVBkd0xoa1ltUnBMNkNNbThpamdEcnN3RFFZSktvWklodmNOQVFFTEJRQXcKRVRFUE1BMEdBMVVFQXhNR2EyRnpjMkZvTUI0WERUSXlNREl5TWpFeE16YzBNRm9YRFRNeU1ESXlNREV4TXpjMApNRm93RVRFUE1BMEdBMVVFQXhNR2EyRnpjMkZvTUlJQklqQU5CZ2txaGtpRzl3MEJBUUVGQUFPQ0FROEFNSUlCCkNnS0NBUUVBN2xHZXdjYUprSDJaekt0Rk9ZalJOMnNvbGFQb0ZtU2pLTDhqNVlyS3c2a0FWYTBTTzArZEhoRXkKcFVJWHlrclMxc2hjTjB2T0xHWmVWeW5BNHg4U0dOSzIyRWNseFl5eXd4MlBCeFAxbkQrTjB2SklJbjhUbnRKbApjZ2tMYXA5ZjZmb [...]
  admissionReviewVersions: ["v1", "v1beta1"]
  timeoutSeconds: 5
